[gd_scene load_steps=32 format=2]

[ext_resource path="res://scripts/Enemies/Skeleton-02.gd" type="Script" id=1]
[ext_resource path="res://assets/Characters/Enemies/Skeleton enemy/Skeleton enemy.png" type="Texture" id=2]
[ext_resource path="res://assets/imgs/hp-bar-bg-small.png" type="Texture" id=5]
[ext_resource path="res://assets/imgs/hp-bar-prog-small.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5, 26 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack"
length = 0.541667
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.166667, 0.375 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_callMethodStartAttack"
}, {
"args": [  ],
"method": "_callMethodFinishAttack"
} ]
}

[sub_resource type="Animation" id=19]
resource_name = "dead"
length = 0.541667
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.541667 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_callMethodFinishDead"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 41, 39, 40, 42 ]
}

[sub_resource type="Animation" id=24]
resource_name = "walk"
length = 0.5
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachine" id=4]
states/attack/node = SubResource( 9 )
states/attack/position = Vector2( 492.333, 77.6667 )
states/dead/node = SubResource( 20 )
states/dead/position = Vector2( 755, 169.223 )
states/hurt/node = SubResource( 14 )
states/hurt/position = Vector2( 413.667, 169.667 )
states/idle/node = SubResource( 6 )
states/idle/position = Vector2( 279, 91 )
states/walk/node = SubResource( 25 )
states/walk/position = Vector2( 120.333, 129.667 )
transitions = [ "idle", "attack", SubResource( 10 ), "attack", "idle", SubResource( 11 ), "idle", "hurt", SubResource( 15 ), "hurt", "idle", SubResource( 16 ), "attack", "hurt", SubResource( 17 ), "hurt", "attack", SubResource( 18 ), "hurt", "dead", SubResource( 21 ), "attack", "dead", SubResource( 22 ), "idle", "dead", SubResource( 23 ), "walk", "idle", SubResource( 26 ), "idle", "walk", SubResource( 27 ) ]
start_node = "idle"
end_node = "dead"

[sub_resource type="AnimationNodeStateMachinePlayback" id=5]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 15, 25.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 23.5, 23.5 )

[node name="Skeleton-02" type="KinematicBody2D" groups=["Enemies"]]
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 528
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, -1 )
rotation = -3.14159
scale = Vector2( 1, -1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.7 )
texture = ExtResource( 2 )
hframes = 13
vframes = 5
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 7 )
anims/dead = SubResource( 19 )
anims/hurt = SubResource( 13 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 24 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 4 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 5 )

[node name="SwordHurt01" type="AudioStreamPlayer" parent="."]

[node name="SwordHurt02" type="AudioStreamPlayer" parent="."]

[node name="HPbar" type="TextureProgress" parent="."]
margin_left = -11.0
margin_top = -35.0
margin_right = 8.0
margin_bottom = -33.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true

[node name="DeadArea" type="Area2D" parent="." groups=["EnemiesDefense"]]
rotation = 3.14159
scale = Vector2( 1, -1 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( 3, -1.5 )
shape = SubResource( 12 )

[node name="AttackArea" type="Area2D" parent="." groups=["Enemies"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 23.5, -14.5 )
shape = SubResource( 8 )

[node name="RayAttack" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 75, 0 )

[node name="RayAttack2" type="RayCast2D" parent="."]
rotation = 3.14159
scale = Vector2( 1, -1 )
enabled = true
cast_to = Vector2( 0, -34 )

[node name="RayFlip" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 34, 0 )
collision_mask = 528

[node name="RayEnd" type="RayCast2D" parent="."]
position = Vector2( 19, 4 )
enabled = true
cast_to = Vector2( 0, 31 )
collision_mask = 528

[node name="RayBackFlip" type="RayCast2D" parent="."]
position = Vector2( -65, 0 )
enabled = true
cast_to = Vector2( -69, 0 )

[connection signal="area_entered" from="DeadArea" to="." method="_on_DeadArea_area_entered"]
